tests/baselines/reference/badArraySyntax.errors.txt
==== tests/cases/compiler/badArraySyntax.ts (4 errors) ====
    class Z {
     public x = "";
    }
    
    var a1: Z[] = [];
    var a2 = new Z[];
                  ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var a3 = new Z[]();
                  ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var a4: Z[] = new Z[];
                       ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var a5: Z[] = new Z[]();
                       ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    
    